--- a/usuario-srv/pom.xml
+++ b/usuario-srv/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
             <version>3.1.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>3.1.4</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
