--- a/config-srv/src/main/resources/application.yaml
+++ b/config-srv/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
       server:
         git:
           default-label: eureka
-          uri: https://github.com/clementeqp/micro-config-entreno22
+          uri: https://github.com/clementeqp/microservicios-SpringBoot-2022.git
           search-paths: config-data
   application:
     name: config-srv
