--- a/config-srv/src/main/resources/application.yaml
+++ b/config-srv/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     config:
       server:
         git:
-          default-label: eureka-multi-instances
+          default-label: gateway
           uri: https://github.com/clementeqp/microservicios-SpringBoot-2022.git
           search-paths: config-data
   application:
