--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/
 !**/src/test/**/target/
 
 ### Project ###
-zipkin-server-2.23.19-exec
+zipkin-server-2.23.19-exec.jar
 
 ### STS ###
 .apt_generated
