--- a/auth-srv/src/main/resources/bootstrap.yaml
+++ b/auth-srv/src/main/resources/bootstrap.yaml
@@ -1,4 +1,3 @@
-
 spring:
   application:
     name: auth-srv
@@ -8,4 +7,4 @@ spring:
       uri: http://localhost:8081
 
 jwt:
-  secret: caracola
+  secret: secret
