--- a/config-data/auth-srv.yaml
+++ b/config-data/auth-srv.yaml
@@ -12,3 +12,11 @@ eureka:
 spring:
   application:
     zipkin: http://localhost:9411
+
+admin-paths:
+    paths:
+      - uri: "/user"
+        method: "POST"
+      - uri: "/user/car/{1}[1-9]+[0-9]*"
+        method: "POST"
+     
