--- a/usuario-srv/src/main/resources/application.properties
+++ b/usuario-srv/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 
 server.port = 8001
 spring.application.name=userDB-srv
+
+#spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.consumer.group-id=myGropup
+#producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+#value.serializer=org.springframework.kafka.support.serializer.JsonSerializer
+#topic=users
